Fixed Singualrity related problems

--- a/ai/DeepStream_Perf_Lab/English/python/jupyter_notebook/Introduction_to_Performance_analysis.ipynb
+++ b/ai/DeepStream_Perf_Lab/English/python/jupyter_notebook/Introduction_to_Performance_analysis.ipynb
@@ -738,7 +738,7 @@
    "source": [
     "### Effects on OSD, Tiler, and Queues\n",
     "\n",
-    "We notice an average of 40-50 FPS for three concurrent streams on a Tesla V100. In the above case, OSD ( On-screen display and Tiling ) can slow down the pipeline. We can design our pipeline such that we get the Inference metadata without the need for visual outputs. This is particularly useful when using Edge devices that only need to send real-time inference metadata to the cloud server for further processing.\n",
+    "In the above case, OSD ( On-screen display and Tiling ) can slow down the pipeline. We can design our pipeline such that we get the Inference metadata without the need for visual outputs. This is particularly useful when using Edge devices that only need to send real-time inference metadata to the cloud server for further processing.\n",
     "\n",
     "#### Disabling OSD & Tiler\n",
     "\n",
@@ -778,12 +778,12 @@
     "\n",
     "Let us summarise our above benchmarks using a table.\n",
     "\n",
-    "|Pipeline|Total time|Avg FPS-per-stream|Number of streams|\n",
-    "|---|----|---|---|\n",
-    "|Default Pipeline|33.787|42|3|\n",
-    "|With Queues|12.526|115|3|\n",
-    "|Without OSD |11.087|129|3|\n",
-    "|With Queues and without OSD|11.054|130|3|\n",
+    "|Pipeline|Relative Time|\n",
+    "|---|----|\n",
+    "|Default Pipeline|baseline|\n",
+    "|With Queues|~3x|\n",
+    "|Without OSD |~3.1x|\n",
+    "|With Queues and without OSD|~3.15x|\n",
     "\n",
     "\n",
     "We can now move on to benchmark our code further using NSight systems in the upcoming notebook."
