--- a/ai/DeepStream_Perf_Lab/English/python/jupyter_notebook/Performance_Analysis_using_NSight_systems.ipynb
+++ b/ai/DeepStream_Perf_Lab/English/python/jupyter_notebook/Performance_Analysis_using_NSight_systems.ipynb
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The performance is better than before and hence we can fit more number of streams to acheive 30 FPS. Let us run for 16 frames now."
+    "The performance is better than before and hence we can fit more number of streams. Let us run for 16 frames now."
    ]
   },
   {
@@ -235,22 +235,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have achieved an average FPS of 170 for 3 streams and ~30 FPS for 16 streams.\n",
-    "\n",
     "Appending this to the table from previous notebook. \n",
     "\n",
-    "|Pipeline|Total time|Avg FPS-per-stream|Number of streams|\n",
-    "|---|----|---|---|\n",
-    "|Default Pipeline|33.787|42|3|\n",
-    "|With Queues|12.526|115|3|\n",
-    "|Without OSD |11.087|129|3|\n",
-    "|With Queues and without OSD|11.054|130|3|\n",
-    "|Streammux - Optimization|8.470|170|3|\n",
+    "|Pipeline|Relative time|\n",
+    "|---|----|\n",
+    "|Default Pipeline|baseline|\n",
+    "|With Queues|~3x|\n",
+    "|Without OSD |~3.1x|\n",
+    "|With Queues and without OSD|~3.15x|\n",
+    "|Streammux - Optimization|~4x|\n",
     "\n",
-    "\n",
-    "|Pipeline|Total time|Avg FPS-per-stream|Number of streams|\n",
-    "|---|----|---|---|\n",
-    "|Streammux - Optimization |47.979|30|16|\n",
     "\n",
     "Let us now profile this application to further optimize it."
    ]
@@ -327,29 +321,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Summarising the above results in a tabular form\n",
-    "\n",
-    "|SGIE batch size|Total time|Avg FPS-per-stream|Number of streams|\n",
-    "|---|----|---|---|\n",
-    "|3|6.615|217|3|\n",
-    "|9|6.572|219|3|\n",
-    "|27|6.489|222|3|\n",
-    "|81|6.804|211|3|\n",
-    "\n",
-    "\n",
-    "First, we notice that when we increase the batch size, the FPS increases. This is obvious as we process buffers in a batch, and this makes the pipeline more efficient. Still, when we increase the Secondary inference batch size to a much higher value, we notice that the FPS decreases,this is because the Secondary inference is stalled and made to wait for more buffers to process in a batch of higher value. Hence when we choose our Secondary batch size, we need to tweak it as per the application. E.g., Setting it to the average number of cars per frame for this application would work as a reasonable estimate.\n",
+    "Summarising the above results, we notice that when we increase the batch size, the FPS increases. This is obvious as we process buffers in a batch, and this makes the pipeline more efficient. Still, when we increase the Secondary inference batch size to a much higher value, we notice that the FPS decreases,this is because the Secondary inference is stalled and made to wait for more buffers to process in a batch of higher value. Hence when we choose our Secondary batch size, we need to tweak it as per the application. E.g., Setting it to the average number of cars per frame for this application would work as a reasonable estimate.\n",
     "\n",
     "Adding this to our previous table : \n",
     "\n",
-    "|Pipeline|Total time|Avg FPS-per-stream|Number of streams|\n",
-    "|---|----|---|---|\n",
-    "|Default Pipeline|33.787|42|3|\n",
-    "|With Queues|12.526|115|3|\n",
-    "|Without OSD |11.087|129|3|\n",
-    "|With Queues and without OSD|11.054|130|3|\n",
-    "|Streammux - Increase batch size|8.470|170|3|\n",
-    "|NVInfer - Set Primary & Secondary batch size|6.489|222|3|\n",
-    "\n",
+    "|Pipeline|Relative time|\n",
+    "|---|----|\n",
+    "|Default Pipeline|baseline|\n",
+    "|With Queues|~3x|\n",
+    "|Without OSD |~3.1x|\n",
+    "|With Queues and without OSD|~3.15x|\n",
+    "|Streammux - Increase batch size|~4x|\n",
+    "|NVInfer - Set Primary & Secondary batch size|~6x|\n",
     "\n",
     "Let us run this for a higher number of streams and profile it for further optimization."
    ]
@@ -438,15 +421,15 @@
    "source": [
     "We can now append this to our previous table and compare with the previous results.\n",
     "\n",
-    "|Pipeline|Total time|Avg FPS-per-stream|Number of streams|\n",
-    "|---|----|---|---|\n",
-    "|Defauly Pipeline|33.787|42|3|\n",
-    "|With Queues|12.526|115|3|\n",
-    "|Without OSD |11.087|129|3|\n",
-    "|With Queues and without OSD|11.054|130|3|\n",
-    "|Streammux - Increase batch size|8.470|170|3|\n",
-    "|NVInfer - Set Primary & Secondary batch size|6.489|222|3|\n",
-    "|NVTracker + INT8| 5.249 | 275|3|\n",
+    "|Pipeline|Relative time|\n",
+    "|---|----|\n",
+    "|Default Pipeline|baseline|\n",
+    "|With Queues|~3x|\n",
+    "|Without OSD |~3.1x|\n",
+    "|With Queues and without OSD|~3.15x|\n",
+    "|Streammux - Increase batch size|~4x|\n",
+    "|NVInfer - Set Primary & Secondary batch size|~6x|\n",
+    "|NVTracker + INT8| 6.2x |\n",
     "\n",
     "Let us now try to run multiple streams with this configuration."
    ]
@@ -466,24 +449,7 @@
    "source": [
     "### Summary\n",
     "\n",
-    "We started with 42 FPS-per-stream and have optimized it to currently have around 275 FPS-per-stream on Average.\n",
-    "\n",
-    "|Pipeline|Total time|Avg FPS-per-stream|Number of streams|\n",
-    "|---|----|---|---|\n",
-    "|Default Pipeline|33.787|42|3|\n",
-    "|With Queues|12.526|115|3|\n",
-    "|Without OSD |11.087|129|3|\n",
-    "|With Queues and without OSD|11.054|130|3|\n",
-    "|Streammux - Increase batch size|8.470|170|3|\n",
-    "|NVInfer - Set Primary & Secondary batch size|6.489|222|3|\n",
-    "|NVTracker + INT8| 5.249 | 275|3|\n",
-    "\n",
-    "|Pipeline|Total time|Avg FPS-per-stream|Number of streams|\n",
-    "|---|----|---|---|\n",
-    "|Streammux - Optimization |47.979|30|16|\n",
-    "|All optimization| 50.566 | 30 | 30\n",
-    "\n",
-    "And we can run an average of ~30 FPS for around 30 Streams concurrently. The optimizations discussed in the first and second notebooks are some parameters that are easy to tweak to get maximum performance for our DeepStream pipeline.\n",
+    "We started with baseline version of pipline and increased the FPS by almost 6x. The optimizations discussed in the first and second notebooks are some parameters that are easy to tweak to get maximum performance for our DeepStream pipeline.\n",
     "\n",
     "\n",
     "In the upcoming notebook, let us take another example and try to improve the application step-by-step.\n",
