--- a/ai/RAPIDS/English/Python/jupyter_notebook/Challenge/Bike-Rental-Prediction/Challenge.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/Challenge/Bike-Rental-Prediction/Challenge.ipynb
@@ -439,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weather.drop_column('RTemp')\n",
+    "weather.drop(['RTemp'],axis=1,inplace=True)\n",
     "weather"
    ]
   },
@@ -822,7 +822,7 @@
    "outputs": [],
    "source": [
     "holidays['date'] = cudf.to_datetime(holidays['date'])\n",
-    "holidays.drop_column('Description')\n",
+    "holidays.drop(['Description'],axis=1,inplace=True)\n",
     "holidays['Holiday'] = 1\n",
     "holidays"
    ]
@@ -919,7 +919,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = gdf.drop(['Holiday', 'date'])"
+    "gdf = gdf.drop(['Holiday', 'date'],axis=1)"
    ]
   },
   {
@@ -969,7 +969,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = gdf.drop(['Weather', 'Weather_dummy_1'])"
+    "gdf = gdf.drop(['Weather', 'Weather_dummy_1'],axis=1)"
    ]
   },
   {
@@ -1003,9 +1003,9 @@
     "    \n",
     "    \n",
     "    ### TODO drop one of the nowly added dummy variable (~ 1 line of code)\n",
-    "    gdf.drop_column(...)\n",
+    "    gdf.drop(...)\n",
     "    \n",
-    "    gdf.drop_column(item) # drop the original item\n",
+    "    gdf.drop(item) # drop the original item\n",
     "    \n",
     "# Inspect the resulting table\n",
     "gdf"
@@ -1024,7 +1024,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf.to_csv('data/bike_sharing.csv')"
+    "gdf.to_csv('../../../data/bike_sharing.csv')"
    ]
   },
   {
@@ -1072,7 +1072,7 @@
    "outputs": [],
    "source": [
     "y = gdf['cnt']\n",
-    "X = gdf.drop('cnt')"
+    "X = gdf.drop('cnt',axis=1)"
    ]
   },
   {
