--- a/ai/RAPIDS/English/Python/jupyter_notebook/Challenge/Bike-Rental-Prediction/Solution.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/Challenge/Bike-Rental-Prediction/Solution.ipynb
@@ -1181,7 +1181,7 @@
     }
    ],
    "source": [
-    "weather.drop_column('RTemp')\n",
+    "weather.drop(['RTemp'],axis=1,inplace=True)\n",
     "weather"
    ]
   },
@@ -2715,7 +2715,7 @@
    ],
    "source": [
     "holidays['date'] = cudf.to_datetime(holidays['date'])\n",
-    "holidays.drop_column('Description')\n",
+    "holidays.drop(['Description'],axis=1,inplace=True)\n",
     "holidays['Holiday'] = 1\n",
     "holidays"
    ]
@@ -3296,7 +3296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = gdf.drop(['Holiday', 'date'])"
+    "gdf = gdf.drop(['Holiday', 'date'],axis=1)"
    ]
   },
   {
@@ -3481,7 +3481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = gdf.drop(['Weather', 'Weather_dummy_1'])"
+    "gdf = gdf.drop(['Weather', 'Weather_dummy_1'],axis=1)"
    ]
   },
   {
@@ -3514,8 +3514,8 @@
     "    ### Todo implement one-hot encoding for item\n",
     "    codes = gdf[item].unique()\n",
     "    gdf = gdf.one_hot_encoding(item, item + '_dummy', codes)\n",
-    "    gdf = gdf.drop('{}_dummy_1'.format(item))\n",
-    "    gdf = gdf.drop(item) # drop the original item"
+    "    gdf = gdf.drop('{}_dummy_1'.format(item),axis=1)\n",
+    "    gdf = gdf.drop(item,axis=1) # drop the original item"
    ]
   },
   {
@@ -3971,7 +3971,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf.to_csv('data/bike_sharing.csv')"
+    "gdf.to_csv('../../../data/bike_sharing.csv')"
    ]
   },
   {
@@ -4019,7 +4019,7 @@
    "outputs": [],
    "source": [
     "y = gdf['cnt']\n",
-    "X = gdf.drop('cnt')"
+    "X = gdf.drop('cnt',axis=1)"
    ]
   },
   {
