--- a/ai/RAPIDS/English/Python/jupyter_notebook/CuDF/02-Intro_to_cuDF_UDFs.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/CuDF/02-Intro_to_cuDF_UDFs.ipynb
@@ -302,6 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#modify the code in this cell\n",
     "def haversine_distance_kernel(lat1, lon1, lat2, lon2, out, r):\n",
     "    \"\"\"Haversine distance formula taken from Michael Dunn's StackOverflow post:\n",
     "    https://stackoverflow.com/questions/4913349/haversine-formula-in-python-bearing-and-distance-between-two-gps-points\n",
@@ -324,20 +325,6 @@
     "    out[i] = c * r\n",
     "   \n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "df = df.apply_rows(haversine_distance_kernel,\n",
-    "                   incols=['lat1', 'lon1', 'lat2', 'lon2'],\n",
-    "                   outcols=dict(out=np.float64),\n",
-    "                   kwargs=dict(r=6371))\n"
    ]
   },
   {
@@ -398,6 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#modify the code in this cell\n",
     "from math import atan2\n",
     "\n",
     "def bearing_kernel(lat1, lon1, lat2, lon2, out):\n",
@@ -415,20 +403,6 @@
     "        a = atan2(sin(dlon)*cos(x_2), cos(x_1)*sin(x_1) - sin(x_1)*cos(x_2)*cos(dlon))\n",
     "        # Convert radians [-π, π] to degrees [0°, 360°]\n",
     "        out[i] = (180/pi*a + 180) % 360"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "\n",
-    "df = df.apply_rows(bearing_kernel,\n",
-    "                   incols=['lat1', 'lon1', 'lat2', 'lon2'],\n",
-    "                   outcols=dict(out=np.float64),\n",
-    "                   kwargs=dict())"
    ]
   },
   {
@@ -577,6 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#modify the code in this cell\n",
     "from math import atan2\n",
     "\n",
     "\n",
@@ -606,22 +581,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "df = df.apply_chunks(bearing_kernel,\n",
-    "                     incols=['lat1', 'lon1', 'lat2', 'lon2'],\n",
-    "                     outcols=dict(out=np.float64),\n",
-    "                     kwargs=dict(),\n",
-    "                     chunks=16,\n",
-    "                     tpb=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "print(df.head())"
    ]
   },
