--- a/ai/RAPIDS/English/Python/jupyter_notebook/CuML/01-LinearRegression-Hyperparam.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/CuML/01-LinearRegression-Hyperparam.ipynb
@@ -19,13 +19,12 @@
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;\n",
     "[1]\n",
-    "[2](02-SGD.ipynb)\n",
-    "[3](03_CuML_Exercise.ipynb)\n",
+    "[2](03_CuML_Exercise.ipynb)\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "[Next Notebook](02-SGD.ipynb)"
+    "[Next Notebook](03_CuML_Exercise.ipynb)"
    ]
   },
   {
@@ -256,7 +255,7 @@
    "source": [
     "<a id='ex1'></a>\n",
     "\n",
-    "### Mini Exercise: create a cuDF Dataframe with `x` and `y`"
+    "### Create a cuDF Dataframe with `x` and `y`"
    ]
   },
   {
@@ -267,26 +266,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "<details><summary><b>Solution</b></summary>\n",
-    "   <pre>\n",
-    "df = cudf.DataFrame({'x': x, 'y': y_noisy})\n",
-    "print(df.head())\n",
-    "\n",
-    "</pre>\n",
-    "</details>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create the dataframe here\n"
+    "df = cudf.DataFrame({'x': x, 'y': y_noisy})\n",
+    "print(df.head())"
    ]
   },
   {
@@ -319,29 +305,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<details><summary><b>Solution</b></summary>\n",
-    "   <pre>\n",
-    "linear_regression_gpu.fit(cp.expand_dims(cp.array(df['x']),1), y_noisy)\n",
-    "\n",
-    "</pre>\n",
-    "</details>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cupy as cp\n",
     "# instantiate and fit model, change the column names if you used a different name\n",
     "linear_regression_gpu = LinearRegressionGPU()\n",
-    "# this is equivalent to \n",
-    "# linear_regression_gpu = LinearRegressionGPU(algorithm='eig', fit_intercept=True, normalize=False)\n",
-    "\n",
-    "# Now lets fit X to y, replace column names if you named them differently\n"
+    "linear_regression_gpu.fit(cp.expand_dims(cp.array(df['x']),1), y_noisy)\n"
    ]
   },
   {
@@ -758,7 +730,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "We have learnt how to create machine learning models in CuML, from feeding data to them and fitting the models to testing their performance on data. We have also understood how to perform hyperparameter optimization to boost the model accuracy. As we have based this tutorial only on CuDF objects, you may visit the bonus lab [here](Bonus_Lab-LogisticRegression.ipynb) to learn the implementation of Logistic Regression algorithm using CuPy objects. Moving on to the next lab, we will be learning a more complex machine learning model - namely the Mini Batch SGD (MBSGD) model."
+    "We have learnt how to create machine learning models in CuML, from feeding data to them and fitting the models to testing their performance on data. We have also understood how to perform hyperparameter optimization to boost the model accuracy. As we have based this tutorial only on CuDF objects, you may visit the bonus lab [here](Bonus_Lab-LogisticRegression.ipynb) to learn the implementation of Logistic Regression algorithm using CuPy objects."
    ]
   },
   {
@@ -781,13 +753,12 @@
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&ensp;\n",
     "[1]\n",
-    "[2](02-SGD.ipynb)\n",
-    "[3](03_CuML_Exercise.ipynb)\n",
+    "[2](03_CuML_Exercise.ipynb)\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
-    "[Next Notebook](02-SGD.ipynb)\n",
+    "[Next Notebook](03_CuML_Exercise.ipynbb)\n",
     "\n",
     "\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
