--- a/ai/RAPIDS/English/Python/jupyter_notebook/CuML/03_CuML_Exercise.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/CuML/03_CuML_Exercise.ipynb
@@ -12,14 +12,13 @@
     "&emsp;&emsp;&ensp;\n",
     "[Home Page](../START_HERE.ipynb)\n",
     "\n",
-    "[Previous Notebook](02-SGD.ipynb)\n",
+    "[Previous Notebook](01-LinearRegression-Hyperparam.ipynb)\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "[1](01-LinearRegression-Hyperparam.ipynb)\n",
-    "[2](02-SGD.ipynb)\n",
-    "[3]"
+    "[2]"
    ]
   },
   {
@@ -190,7 +189,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "link to label encoder\n",
+    "#link to label encoder\n",
     "label_encoder = preprocessing.LabelEncoder() \n",
     "df['County']= label_encoder.fit_transform(df['County']) \n",
     "df['State']= label_encoder.fit_transform(df['State'])\n",
@@ -339,9 +338,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Convert the data to CuDF dataframes here\n",
-    "\n",
     "%%time\n",
+    "#Convert the data to CuDF dataframes here\n",
     "X_cudf_train = cudf.DataFrame.from_pandas(X_train)\n",
     "X_cudf_test = cudf.DataFrame.from_pandas(X_test)\n",
     "\n",
@@ -696,14 +694,13 @@
     "&emsp;&emsp;&ensp;\n",
     "[Home Page](../START_HERE.ipynb)\n",
     "\n",
-    "[Previous Notebook](02-SGD.ipynb)\n",
+    "[Previous Notebook](01-LinearRegression-Hyperparam.ipynb)\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "[1](01-LinearRegression-Hyperparam.ipynb)\n",
-    "[2](02-SGD.ipynb)\n",
-    "[3]"
+    "[2]"
    ]
   }
  ],
