--- a/ai/RAPIDS/English/Python/jupyter_notebook/CuML/04_CuML_Solution.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/CuML/04_CuML_Solution.ipynb
@@ -18,9 +18,7 @@
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "[1](01-LinearRegression-Hyperparam.ipynb)\n",
-    "[2](02-SGD.ipynb)\n",
-    "[3](03_CuML_Exercise.ipynb)\n",
-    "[4]"
+    "[2](03_CuML_Exercise.ipynb)"
    ]
   },
   {
@@ -478,7 +476,7 @@
    ],
    "source": [
     "%%time\n",
-    "link to label encoder\n",
+    "#link to label encoder\n",
     "label_encoder = preprocessing.LabelEncoder() \n",
     "df['County']= label_encoder.fit_transform(df['County']) \n",
     "df['State']= label_encoder.fit_transform(df['State'])\n",
@@ -669,9 +667,8 @@
     }
    ],
    "source": [
-    "#Convert the data to CuDF dataframes here\n",
-    "\n",
     "%%time\n",
+    "#Convert the data to CuDF dataframes here\n",
     "X_cudf_train = cudf.DataFrame.from_pandas(X_train)\n",
     "X_cudf_test = cudf.DataFrame.from_pandas(X_test)\n",
     "\n",
@@ -1207,9 +1204,7 @@
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "[1](01-LinearRegression-Hyperparam.ipynb)\n",
-    "[2](02-SGD.ipynb)\n",
-    "[3](03_CuML_Exercise.ipynb)\n",
-    "[4]\n",
+    "[2](03_CuML_Exercise.ipynb)\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
     "&emsp;&emsp;&emsp;&emsp;&emsp;\n",
@@ -1242,7 +1237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
