--- a/ai/RAPIDS/English/Python/jupyter_notebook/Dask/02-CuDF_and_Dask.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/Dask/02-CuDF_and_Dask.ipynb
@@ -137,10 +137,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = cudf.DataFrame([('a', list(range(20))),\n",
-    "('b', list(reversed(range(20)))),\n",
-    "('c', list(range(20)))])\n",
-    "print(df)"
+    "df = cudf.DataFrame({'a': list(range(20)),\n",
+    "                     'b': list(reversed(range(20))),\n",
+    "                     'c': list(range(20))\n",
+    "                    })"
    ]
   },
   {
@@ -1381,7 +1381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = cudf.read_parquet('example_output/temp_parquet/72706b163a0d4feb949005d22146ad83.parquet')\n",
+    "df = cudf.read_parquet('example_output/temp_parquet')\n",
     "print(df.to_pandas())"
    ]
   },
