--- a/ai/RAPIDS/English/Python/jupyter_notebook/Dask/01-Intro_to_Dask.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/Dask/01-Intro_to_Dask.ipynb
@@ -74,41 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table style=\"border: 2px solid white;\">\n",
-       "<tr>\n",
-       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
-       "<h3 style=\"text-align: left;\">Client</h3>\n",
-       "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Scheduler: </b>tcp://127.0.0.1:32851</li>\n",
-       "  <li><b>Dashboard: </b><a href='http://127.0.0.1:8787/status' target='_blank'>http://127.0.0.1:8787/status</a></li>\n",
-       "</ul>\n",
-       "</td>\n",
-       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
-       "<h3 style=\"text-align: left;\">Cluster</h3>\n",
-       "<ul style=\"text-align: left; list-style:none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Workers: </b>2</li>\n",
-       "  <li><b>Cores: </b>2</li>\n",
-       "  <li><b>Memory: </b>270.12 GB</li>\n",
-       "</ul>\n",
-       "</td>\n",
-       "</tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<Client: 'tcp://127.0.0.1:32851' processes=2 threads=2, memory=270.12 GB>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dask\n",
     "from dask.distributed import Client, wait\n",
@@ -138,39 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Thu Dec 17 13:04:09 2020       \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 450.51.05    Driver Version: 450.51.05    CUDA Version: 11.0     |\n",
-      "|-------------------------------+----------------------+----------------------+\n",
-      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
-      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
-      "|                               |                      |               MIG M. |\n",
-      "|===============================+======================+======================|\n",
-      "|   0  Tesla V100-PCIE...  Off  | 00000000:18:00.0 Off |                    0 |\n",
-      "| N/A   65C    P0    48W / 250W |  13126MiB / 32510MiB |      0%      Default |\n",
-      "|                               |                      |                  N/A |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "|   1  Tesla V100-PCIE...  Off  | 00000000:AF:00.0 Off |                    0 |\n",
-      "| N/A   41C    P0    42W / 250W |  14026MiB / 32510MiB |      0%      Default |\n",
-      "|                               |                      |                  N/A |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "                                                                               \n",
-      "+-----------------------------------------------------------------------------+\n",
-      "| Processes:                                                                  |\n",
-      "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
-      "|        ID   ID                                                   Usage      |\n",
-      "|=============================================================================|\n",
-      "+-----------------------------------------------------------------------------+\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!nvidia-smi"
    ]
@@ -188,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,13 +138,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "rs = da.random.RandomState(RandomState=cp.random.RandomState, seed=12)  # <-- we specify cupy here\n",
     "\n",
-    "x = rs.random((1000000, 1000), chunks=(10000,1000))\n",
+    "x = rs.random((100000, 1000), chunks=(10000,1000))\n",
     "x = x.persist() # so quick we don't need to wait"
    ]
   },
@@ -224,76 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr>\n",
-       "<td>\n",
-       "<table>\n",
-       "  <thead>\n",
-       "    <tr><td> </td><th> Array </th><th> Chunk </th></tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr><th> Bytes </th><td> 8.00 GB </td> <td> 80.00 MB </td></tr>\n",
-       "    <tr><th> Shape </th><td> (1000000, 1000) </td> <td> (10000, 1000) </td></tr>\n",
-       "    <tr><th> Count </th><td> 100 Tasks </td><td> 100 Chunks </td></tr>\n",
-       "    <tr><th> Type </th><td> float64 </td><td> cupy.ndarray </td></tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</td>\n",
-       "<td>\n",
-       "<svg width=\"75\" height=\"170\" style=\"stroke:rgb(0,0,0);stroke-width:1\" >\n",
-       "\n",
-       "  <!-- Horizontal lines -->\n",
-       "  <line x1=\"0\" y1=\"0\" x2=\"25\" y2=\"0\" style=\"stroke-width:2\" />\n",
-       "  <line x1=\"0\" y1=\"6\" x2=\"25\" y2=\"6\" />\n",
-       "  <line x1=\"0\" y1=\"12\" x2=\"25\" y2=\"12\" />\n",
-       "  <line x1=\"0\" y1=\"18\" x2=\"25\" y2=\"18\" />\n",
-       "  <line x1=\"0\" y1=\"25\" x2=\"25\" y2=\"25\" />\n",
-       "  <line x1=\"0\" y1=\"31\" x2=\"25\" y2=\"31\" />\n",
-       "  <line x1=\"0\" y1=\"37\" x2=\"25\" y2=\"37\" />\n",
-       "  <line x1=\"0\" y1=\"43\" x2=\"25\" y2=\"43\" />\n",
-       "  <line x1=\"0\" y1=\"50\" x2=\"25\" y2=\"50\" />\n",
-       "  <line x1=\"0\" y1=\"56\" x2=\"25\" y2=\"56\" />\n",
-       "  <line x1=\"0\" y1=\"62\" x2=\"25\" y2=\"62\" />\n",
-       "  <line x1=\"0\" y1=\"68\" x2=\"25\" y2=\"68\" />\n",
-       "  <line x1=\"0\" y1=\"75\" x2=\"25\" y2=\"75\" />\n",
-       "  <line x1=\"0\" y1=\"81\" x2=\"25\" y2=\"81\" />\n",
-       "  <line x1=\"0\" y1=\"87\" x2=\"25\" y2=\"87\" />\n",
-       "  <line x1=\"0\" y1=\"93\" x2=\"25\" y2=\"93\" />\n",
-       "  <line x1=\"0\" y1=\"100\" x2=\"25\" y2=\"100\" />\n",
-       "  <line x1=\"0\" y1=\"106\" x2=\"25\" y2=\"106\" />\n",
-       "  <line x1=\"0\" y1=\"112\" x2=\"25\" y2=\"112\" />\n",
-       "  <line x1=\"0\" y1=\"120\" x2=\"25\" y2=\"120\" style=\"stroke-width:2\" />\n",
-       "\n",
-       "  <!-- Vertical lines -->\n",
-       "  <line x1=\"0\" y1=\"0\" x2=\"0\" y2=\"120\" style=\"stroke-width:2\" />\n",
-       "  <line x1=\"25\" y1=\"0\" x2=\"25\" y2=\"120\" style=\"stroke-width:2\" />\n",
-       "\n",
-       "  <!-- Colored Rectangle -->\n",
-       "  <polygon points=\"0.0,0.0 25.412616514582485,0.0 25.412616514582485,120.0 0.0,120.0\" style=\"fill:#8B4903A0;stroke-width:0\"/>\n",
-       "\n",
-       "  <!-- Text -->\n",
-       "  <text x=\"12.706308\" y=\"140.000000\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" >1000</text>\n",
-       "  <text x=\"45.412617\" y=\"60.000000\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" transform=\"rotate(-90,45.412617,60.000000)\">1000000</text>\n",
-       "</svg>\n",
-       "</td>\n",
-       "</tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "dask.array<random_sample, shape=(1000000, 1000), dtype=float64, chunksize=(10000, 1000), chunktype=cupy.ndarray>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x"
    ]
@@ -309,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,76 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr>\n",
-       "<td>\n",
-       "<table>\n",
-       "  <thead>\n",
-       "    <tr><td> </td><th> Array </th><th> Chunk </th></tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr><th> Bytes </th><td> 8.00 GB </td> <td> 80.00 MB </td></tr>\n",
-       "    <tr><th> Shape </th><td> (1000000, 1000) </td> <td> (10000, 1000) </td></tr>\n",
-       "    <tr><th> Count </th><td> 875 Tasks </td><td> 100 Chunks </td></tr>\n",
-       "    <tr><th> Type </th><td> float64 </td><td> numpy.ndarray </td></tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</td>\n",
-       "<td>\n",
-       "<svg width=\"75\" height=\"170\" style=\"stroke:rgb(0,0,0);stroke-width:1\" >\n",
-       "\n",
-       "  <!-- Horizontal lines -->\n",
-       "  <line x1=\"0\" y1=\"0\" x2=\"25\" y2=\"0\" style=\"stroke-width:2\" />\n",
-       "  <line x1=\"0\" y1=\"6\" x2=\"25\" y2=\"6\" />\n",
-       "  <line x1=\"0\" y1=\"12\" x2=\"25\" y2=\"12\" />\n",
-       "  <line x1=\"0\" y1=\"18\" x2=\"25\" y2=\"18\" />\n",
-       "  <line x1=\"0\" y1=\"25\" x2=\"25\" y2=\"25\" />\n",
-       "  <line x1=\"0\" y1=\"31\" x2=\"25\" y2=\"31\" />\n",
-       "  <line x1=\"0\" y1=\"37\" x2=\"25\" y2=\"37\" />\n",
-       "  <line x1=\"0\" y1=\"43\" x2=\"25\" y2=\"43\" />\n",
-       "  <line x1=\"0\" y1=\"50\" x2=\"25\" y2=\"50\" />\n",
-       "  <line x1=\"0\" y1=\"56\" x2=\"25\" y2=\"56\" />\n",
-       "  <line x1=\"0\" y1=\"62\" x2=\"25\" y2=\"62\" />\n",
-       "  <line x1=\"0\" y1=\"68\" x2=\"25\" y2=\"68\" />\n",
-       "  <line x1=\"0\" y1=\"75\" x2=\"25\" y2=\"75\" />\n",
-       "  <line x1=\"0\" y1=\"81\" x2=\"25\" y2=\"81\" />\n",
-       "  <line x1=\"0\" y1=\"87\" x2=\"25\" y2=\"87\" />\n",
-       "  <line x1=\"0\" y1=\"93\" x2=\"25\" y2=\"93\" />\n",
-       "  <line x1=\"0\" y1=\"100\" x2=\"25\" y2=\"100\" />\n",
-       "  <line x1=\"0\" y1=\"106\" x2=\"25\" y2=\"106\" />\n",
-       "  <line x1=\"0\" y1=\"112\" x2=\"25\" y2=\"112\" />\n",
-       "  <line x1=\"0\" y1=\"120\" x2=\"25\" y2=\"120\" style=\"stroke-width:2\" />\n",
-       "\n",
-       "  <!-- Vertical lines -->\n",
-       "  <line x1=\"0\" y1=\"0\" x2=\"0\" y2=\"120\" style=\"stroke-width:2\" />\n",
-       "  <line x1=\"25\" y1=\"0\" x2=\"25\" y2=\"120\" style=\"stroke-width:2\" />\n",
-       "\n",
-       "  <!-- Colored Rectangle -->\n",
-       "  <polygon points=\"0.0,0.0 25.412616514582485,0.0 25.412616514582485,120.0 0.0,120.0\" style=\"fill:#8B4903A0;stroke-width:0\"/>\n",
-       "\n",
-       "  <!-- Text -->\n",
-       "  <text x=\"12.706308\" y=\"140.000000\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" >1000</text>\n",
-       "  <text x=\"45.412617\" y=\"60.000000\" font-size=\"1.0rem\" font-weight=\"100\" text-anchor=\"middle\" transform=\"rotate(-90,45.412617,60.000000)\">1000000</text>\n",
-       "</svg>\n",
-       "</td>\n",
-       "</tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "dask.array<mul, shape=(1000000, 1000), dtype=float64, chunksize=(10000, 1000), chunktype=numpy.ndarray>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "u"
    ]
@@ -401,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,29 +221,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 9.93120508e-04, -5.33913544e-04,  4.62268101e-05,\n",
-       "        -3.45476128e-04, -1.65744840e-03],\n",
-       "       [ 1.00547562e-03, -3.77065720e-04, -1.66230680e-03,\n",
-       "        -2.56230601e-04, -4.87001391e-04],\n",
-       "       [ 9.70568388e-04, -7.14696011e-04, -3.99702364e-04,\n",
-       "        -5.90555975e-04,  5.82605644e-04],\n",
-       "       [ 9.96828082e-04,  3.19535134e-04,  6.19697709e-04,\n",
-       "        -1.27881587e-03,  4.81231481e-04],\n",
-       "       [ 9.95186590e-04, -1.79692605e-03, -2.55216038e-04,\n",
-       "         4.35893465e-04, -6.94865772e-04]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "u[:5, :5].compute()"
    ]
@@ -521,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
