--- a/ai/RAPIDS/English/Python/jupyter_notebook/Dask/03-CuML_and_Dask.ipynb
+++ b/ai/RAPIDS/English/Python/jupyter_notebook/Dask/03-CuML_and_Dask.ipynb
@@ -277,7 +277,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "We can see that the timing output reduces from 11 seconds to 4 seconds and the accuracy is consistent. We are familiar with CuML and Dask integration now. If you wish to explore this in detail, you can refer [here](https://github.com/rapidsai/cuml/tree/branch-0.18/notebooks). If you are confident with the concepts explained till now, you can move to the next lab and attempt to solve the Dask exercise."
+    "We can see that the timing output reduces and the accuracy is similar. We are familiar with CuML and Dask integration now. If you wish to explore this in detail, you can refer [here](https://github.com/rapidsai/cuml/tree/branch-0.18/notebooks). If you are confident with the concepts explained till now, you can move to the next lab and attempt to solve the Dask exercise."
    ]
   },
   {
